source/tests/errors/incompatible_types.apex
a = true
b = 42
c = a + b